phase_2-cloudtrack/terraform-3-tier/igw.tf
resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id 

    tags = {
        Name = "${var.vpc_name}-igw"
    }
  
}
