phase_2-cloudtrack/terraform-3-tier/vpc.tf
resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr
    enable_dns_hostnames = true 
    enable_dns_support = true

    tags = {
        Name = var.vpc_name
        Environment = var.environment 
    }
}
